--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/react": "^5.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.4",
     "lucide": "^0.439.0",
     "lucide-react": "^0.439.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-moment": "^1.1.3",
     "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
